Mon Apr 15 18:18:18 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * CIAO_DAnCE.mwc:

          Added ami4ccm and dds4ccm connectors to this workspace.

Mon Apr 15 08:59:47 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/DDS4CCM-INSTALL.html:
          Added exact instructions how to compile DDS4CCM with OpenDDS
          on linux. These can be copied to the console and will compile
          everything

        * connectors/dds4ccm/examples/Shapes/descriptors/2013_interop_demo/run_1.pl:
        * connectors/dds4ccm/examples/Shapes/descriptors/2013_interop_demo/run_2.pl:
        * connectors/dds4ccm/examples/Shapes/descriptors/2013_interop_demo/run_3.pl:
        * connectors/dds4ccm/examples/Shapes/descriptors/2013_interop_demo/run_4.pl:
        * connectors/dds4ccm/examples/Shapes/descriptors/2013_interop_demo/run_6.pl:
        * connectors/dds4ccm/examples/Shapes/descriptors/2013_interop_demo/run_7.pl:
        * connectors/dds4ccm/examples/Shapes/descriptors/2013_interop_demo/run_8.pl:
        * connectors/dds4ccm/examples/Shapes/descriptors/2013_interop_demo/run_9.pl:
          Make these running on trunk, only run_8.pl needs some more work

Fri Apr 12 20:40:54 UTC 2013  Adam Mitz  <mitza@ociweb.com>

        * ciao/Logger/Log_Macros.h:
        * ciao/Logger/Log_Macros.cpp:
        * connectors/dds4ccm/impl/logger/Log_Macros.h:
        * connectors/dds4ccm/impl/logger/Log_Macros.cpp:

          Use distinct ACE Log Categories for both CIAO and DDS4CCM.

Thu Apr 11 06:49:15 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/impl/DDS_Listen_T.h:
          Added missing includes in case an user includes this template
          stand alone in his own custom connector

Wed Apr 10 14:08:25 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/DDS4CCM-INSTALL.html:
          Extended instructions for OpenDDS

Thu Mar 14 12:42:30 UTC 2013  Johnny Willemsen  <jwillemsen@remedy.nl>